# BookmarksManager

./: CMakeLists.txt  Main.qml  Test.qml  bookmark.cpp  bookmark.h  bookmarklistmodel.cpp  bookmarklistmodel.h  main.cpp  readme.md  sql.hh  utils.cc  utils.cpp  utils.h  utils.hh
android/: AndroidManifest.xml  build.gradle
android/java/mm/android/bookmarksmanager/: BookmarkAdd.java  DataAdapter.java  DataModel.java
android/java/org/qtproject/example/: BookmarkAdd.java
android/res/layout/: bookmark_add.xml  data_row.xml
